stainless_frontend/tests/fail/strings_methods.rs
extern crate stainless;

pub fn string_len(s: String) -> usize {
  s.len()
}

pub fn str_len() -> usize {
  "Hello, world".len()
}
